# Maiah

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  skills-lock.json  vitest.config.mts
.coolify/: stack.compose.yml
.github/workflows/: ci.yml  coolify.yml
.playwright-cli/: page-2026-07-13T09-50-41-968Z.yml
docker/garage/: garage.toml
docs/: openai-compatible-proxy.md  production-ai-platform-plan.md  tool-connections-and-servicenow-mcp.md  ui-ux-redesign-plan.md
docs/architecture/: agent-configuration-versioning.md  agent-runtime-bounds.md  codebase-guide.md  orchestrator-run-model.md  (+2 more)
messages/: en.json  fr.json
opensandbox/: Dockerfile.code-interpreter  config.dev.toml  config.prod.toml  node-packages.txt  python-requirements.txt
remotion/: MaiahLaunchFilm.tsx  Root.tsx  constants.ts  theme.ts
sandbox-runner/: python-requirements.txt
scripts/: build-opensandbox-image.sh  build-sandbox-runner-image.sh  check-lockfile.mjs  copy-swagger-assets.mjs  generate-openapi-route-manifest.mjs  generate-remotion-soundtrack.py  migrate-standalone.mjs  migrate.ts  sandbox-runner.mjs
searxng/: settings.yml
services/servicenow-mcp-gateway/: Dockerfile  README.md  pyproject.toml
services/servicenow-mcp-gateway/config/: tool_packages.yaml
services/servicenow-mcp-gateway/src/servicenow_mcp_gateway/: __init__.py  app.py
src/: proxy.ts
src/app/: globals.css  (+6 more)
test/: setup-env.ts
(+592 files in other folders)
